converted deprecated code